# cuthill-mckee-algo

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.org  compile_commands.json  cuthill-mckee.cpp  final_alg  final_alg.cpp  helper.hpp  input.txt  input2.txt  kursach(3).docx  kursach.docx  matrix-creator.py  matrix-generator.py  perfect.cpp  rozen.cpp  source.xlsm  source.xlsx
.cache/clangd/index/: bfs.cpp.C3572538ED5C3E05.idx  cuthill-mckee.cpp.7FDDFC7A21B54E3F.idx  final_alg.cpp.51F64B838173942F.idx  helper.hpp.08E9BE12E602389C.idx  temp.cpp.B79F008346F59A02.idx
source-data/: new_input.txt  some_matr.txt
